--- a/app/build.gradle
+++ b/app/build.gradle
@@ -66,7 +66,7 @@ dependencies {
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutine_version"
 
     //circleImage
-    implementation 'de.hdodenhof:circleimageview:3.1.0'
+//    implementation 'de.hdodenhof:circleimageview:3.1.0'
 
     api 'com.theartofdev.edmodo:android-image-cropper:2.8.+'
 
